FIX : ui:  code overflow error

--- a/src/app/_components/markdown-styles.module.css
+++ b/src/app/_components/markdown-styles.module.css
@@ -22,7 +22,7 @@
 }
 
 .markdown pre {
-  @apply my-6 p-4 bg-gray-200 rounded-lg;
+  @apply my-6 p-4 bg-gray-200 rounded-lg overflow-x-auto;
 }
 
 .markdown a {
